--- a/index.html
+++ b/index.html
@@ -120,11 +120,9 @@
 <br>
 <br>I've had the pleasure to spread my wings in the beauty industry by being on both sides of the camera! I've spent the last 4 years as a travelling makeup artist and had the opportunity to work on several professional projects with <a href="https://www.goldwell.us/" target="_blank">Goldwell Color</a> as their official on-set makeup artist. I've also worked on a handful of theater productions and Indy films such as “<a href="https://www.imdb.com/name/nm9430331/" target="_blank">Auto Repair”. </a> 
 <br>
-<br>Since then, I've begun to focus solely on my photography business. I've jumped in head-first and worked on a variety of projects with several modeling agencies in the greater Raleigh area. My absolute favorite project to date is my collaboration with Vogue and Gucci Beauty on their Spring 2020 campaign: "Unconventional Beauty".
+<br>Since then, I've begun to focus solely on my photography business. I've jumped in head-first and worked on a variety of projects with several modeling agencies in the greater Raleigh area. My absolute favorite project to date is my collaboration with Vogue and Gucci Beauty on their Spring 2020 campaign: "<a href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mbr-popup-r">Unconventional Beauty</a>".
 <br>
-<br>I've discovered a reckless passion for fashion photography and have hopes of travelling to New York and Los Angeles to shoot various fashion shows and eventually work on magazine spreads for Vogue, Times, Rolling Stone, and Bazaar Magazines. <br><br>By booking a shoot, not only are you supporting a local artist, but you're also making a contribution to help me realize my dreams and ambitions so I can chase my calling. <br><br>
-Please read my <a href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mbr-popup-r">interview </a>with Josh Yon where we talk about a very personal journey to mental well-being<br>
-<br>I look forward to working with you! &nbsp;<br></p>
+<br>I've discovered a reckless passion for fashion photography and have hopes of travelling to New York and Los Angeles to shoot various fashion shows and eventually work on magazine spreads for Vogue, Times, Rolling Stone, and Bazaar Magazines. <br><br>By booking a shoot, not only are you supporting a local artist, but you're also making a contribution to help me realize my dreams and ambitions so I can chase my calling. <br><br>I look forward to working with you! &nbsp;<br></p>
                     </div>
                     
                 </div>
@@ -221,8 +219,7 @@ Please read my <a href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mb
                 </div>
 
                 <div class="modal-body">
-                    <p class="mbr-text mbr-fonts-style display-7">
-                        A man's journey to mental well-being</p>
+                    <p class="mbr-text mbr-fonts-style display-7">"UNCONVENTIONAL BEAUTY"<br></p>
 
                     <div>
                         <div class="card-img mbr-figure">
@@ -249,7 +246,7 @@ Please read my <a href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mb
         <div class="row">
             <div class="col-lg-6 col-md-12 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Hanna!"><input type="hidden" name="email" data-form-email="true" value="yhH62YCvIVFKFBp9S0ITVa5s+22s007sh7ZCZ8hcBAQhtMtk1o3IccFeKQ+LaeEpGY6OG+QKqAOjda2kRlESd+s//X3DWGxClpG+p2juelKHYWNcmfk8HFTctzWJafWx.pGnSiTgsr1QM7x8HEsVWwdzieaM6qu4TiaZ/ixshgrZ6yeXPC6xGcyYX3yC4xBvPabSYgySo2GdAGD/lnRYEFmaHNfoPOpP64fWknpflG1nzloMi88Cuna3/xQxUZSDn">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Hanna!"><input type="hidden" name="email" data-form-email="true" value="B+F0Jw6KsAguTEfORrHCIPft1yBy1N9dBk9O8CTkpb+BjTP8rlDt0NtO4qRw353fWbn2AQyy2UcxrebUzmjtxnxfrZlbgI3gVkbYONMeNd9Mn5bgZh/vSbg6z+2D6LFA.LCI4fMDt1HckBpIAxYcCk2OPKcrB4z9VAG/ZHv8WX7FIdYdoII9wy45rL6r0phXaiiUi5u9QIQwq+wG5wdlyHzM885s5fFNbxa/Ae/8Opz1OnE3CfM+6JxZQaosTVDSq">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -269,7 +266,7 @@ Please read my <a href="popup:#mbr-popup-r" data-toggle="modal" data-target="#mb
 <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-form02-b">
 </div>
 <div data-for="phone" class="col-lg-6 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="Phone" data-form-field="phone" class="form-control display-7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required="required" value="" id="phone-form02-b">
+<input type="tel" name="phone" placeholder="Phone (123-456-7890)" data-form-field="phone" class="form-control display-7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required="required" value="" id="phone-form02-b">
 </div>
 <div data-for="subject" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="text" name="subject" placeholder="Subject" data-form-field="subject" class="form-control display-7" value="" id="subject-form02-b">
