--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 </section>
 
-<div class="modal mbr-popup cid-rUyBGtVL0E fade" tabindex="-1" role="dialog" data-on-timer-delay="4" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-f" aria-hidden="true">
+<div class="modal mbr-popup cid-rUyBGtVL0E fade" tabindex="-1" role="dialog" data-on-timer-delay="4" data-overlay-color="#ffffff" data-overlay-opacity="0.8" id="mbr-popup-f" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
@@ -302,7 +302,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qYAPxpeGae1YbstMYWYWPK4EQ7SMhhz4QIIrtauetMot/0AlyY0FjqOaBeRL9qvMwX8h5KZSdJn2fDV9QfCAT1nWegfDXk3sCpllgl7Vg6Zpz4RtzHB90zAOBEPe2lVp.3NbStFqtcM57siSFZAAsNbfVTtOb34RS/xCPVv+1P3JPkbAFoKs+u1S+B66yP79zFFCYHHuhGhG5JkIajhEmQ88M2r+HHwFblm5HCKQyuUFr6yWvKeBMr/cSP0I9e/45">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="YzjIdqfzezD7RTqLx0WZCw9fb7UkimSpkQ3CN3VIsbfRtfoxjHU5eK9SRQKGeELBCfgHQuPe2SpbTlIXOkTCWDa9Ht/SBn7IYwg6a2N7pnZJw7Y43FWbaJ96QyNOmxM=.zZcGqcJKhEhIdUWfqCpfSc55qSLixh6WPF5Dz2HyCM9hP8bPzdkoKWWjsqgsqQ8tX4OLvuEHpQzv5fJVLbKsesXoH+YGkfm4SWZRoacroQvuAHyshEKyFVrl2/X1pbo4">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -379,8 +379,7 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-2 m-auto px-4 align-right">
-                <p class="mbr-text mb-0 links mbr-fonts-style display-4"><a href="#" class="text-warning">Privacy</a> &nbsp;| &nbsp;<a href="#" class="text-warning">Integrity
-                    </a> </p>
+                <p class="mbr-text mb-0 links mbr-fonts-style display-4"></p><p><a href="popup:#mbr-popup-g" class="text-warning" data-toggle="modal" data-target="#mbr-popup-g">Privacy</a> &nbsp;| &nbsp;Terms of Service<a href="#" class="text-warning"></a></p><p></p>
             </div>
             <div class="col-md-12 col-lg-3 m-auto px-4 align-left">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 2003-2020 Triangle Funding Group, LLC</p>
