create github pages

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PElmv7RGyk3aPD3JFzx+0oHspieZb+BWBHb9kN9mnh5SKQHrBz2YxQ2KnhOXhCpMyBiLZRNNjZft7RqZux4Nc12J30uXf6XHOFDYHIHqCzDVsLngqzu0WWEynH0eNfUt.OLfIoUN3rDhqbC7p4KeZK4CNGslGy9vC/NcHhQZRvfSqiy3ZPI+V4p1k7gUZ2bHicF+kJPl8tGUxNyBPKt+MU4hKnOpsAe6Q4LCKBu2JYeEkv+GWQikBLpn4tZKBnrAT">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3HrXyGPHN7jAc0oH8hChzln/hRIrM2gwekhKxk/XA+JN5mvTsRaweiJ9LwhltkSGI8D8r+iG5arNc5CdWl1VOaRdAObq/5QwGvPcKRhZyHcXtZXd02OmsFIagsWTWV7D.MrP+QLds4MzO8G6ABgCtTG6bPZsgp7TBOilPAbcpMYGiiVyFV1URwRnyG+ooh2EDljzq3zv7lKWX3JSzs+67kefAElILAVLCahOuIqaXVgTFHNxCHe9rlNei9T9kBP6Y">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -370,7 +370,7 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-2 m-auto px-4 align-right">
-                <p class="mbr-text mb-0 links mbr-fonts-style display-4"></p><p><a href="popup:#mbr-popup-g" class="text-warning" data-toggle="modal" data-target="#mbr-popup-g">Privacy</a> &nbsp;| &nbsp;Terms of Service<a href="#" class="text-warning"></a></p><p></p>
+                <p class="mbr-text mb-0 links mbr-fonts-style display-4"></p><p><a href="popup:#mbr-popup-g" class="text-warning" data-toggle="modal" data-target="#mbr-popup-g">Privacy</a> &nbsp;| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l">Terms of Service</a><a href="#" class="text-warning"></a></p><p></p>
             </div>
             <div class="col-md-12 col-lg-3 m-auto px-4 align-left">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 2003-2020 Triangle Funding Group, LLC</p>
