create github pages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,20 @@
 
   
 
-</head>
+<meta name="theme-color" content="#149dcc">
+<link rel="manifest" href="manifest.json">
+<script src="sw-connect.js"></script>
+<meta name="apple-mobile-web-app-capable" content="yes">
+<link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-640x1136.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-750x1334.png">
+<link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1242x2208.png">
+<link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="assets/images/apple-launch-1125x2436.png">
+<link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1536x2048.png">
+<link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-1668x2224.png">
+<link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="Triangle Funding Group">
+<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
 <body>
   <section class="menu cid-rL8je9RKKQ" once="menu" id="menu2-0">
 
@@ -293,7 +306,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3HrXyGPHN7jAc0oH8hChzln/hRIrM2gwekhKxk/XA+JN5mvTsRaweiJ9LwhltkSGI8D8r+iG5arNc5CdWl1VOaRdAObq/5QwGvPcKRhZyHcXtZXd02OmsFIagsWTWV7D.MrP+QLds4MzO8G6ABgCtTG6bPZsgp7TBOilPAbcpMYGiiVyFV1URwRnyG+ooh2EDljzq3zv7lKWX3JSzs+67kefAElILAVLCahOuIqaXVgTFHNxCHe9rlNei9T9kBP6Y">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4mNsI0+x/48G7NZvH1u9LMggFqVQpCKJTNOpnzdFarg0CddNvE0d1PytAQD57tmVQsxABYF7Isvu0wouql4x8nRxgUufeD7WnFS2ITsccKpG6LeTGoxsiZVOowC0anyQ.CT9HnCXqlplRQy6S9zLnFUUpUA2zPj4fcw7fhAJrd7byDcgyKrxyHzAGp2qRrXQgUioyPWkzzJFVKBKxLnGEA6OGDZv56uO0DKJ2M4iiEe8U78AuXU2YxJPV9YmOMdGi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -370,7 +383,7 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-2 m-auto px-4 align-right">
-                <p class="mbr-text mb-0 links mbr-fonts-style display-4"></p><p><a href="popup:#mbr-popup-g" class="text-warning" data-toggle="modal" data-target="#mbr-popup-g">Privacy</a> &nbsp;| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l">Terms of Service</a><a href="#" class="text-warning"></a></p><p></p>
+                <p class="mbr-text mb-0 links mbr-fonts-style display-4"></p><p><a href="popup:#mbr-popup-g" class="text-warning" data-toggle="modal" data-target="#mbr-popup-g"><em>Privacy</em></a> &nbsp;| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l"><em>Terms of Service</em></a><a href="#" class="text-warning"></a></p><p></p>
             </div>
             <div class="col-md-12 col-lg-3 m-auto px-4 align-left">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 2003-2020 Triangle Funding Group, LLC</p>
