create github pages

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/coinstime-1-2000x1333-128x85-1.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Home">
   
   
-  <title>Home</title>
+  <title>Triangle Funding Group</title>
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OM5Q5HBEp7Gq6boxAHCgPrYYpZ1Hxeqz7CYtQB23ieAQdnYbMwqTI++Fa2AufW70FS3wuYL+mCAibjrPNs8iq5JrNk0VxL9nDfiqUDLuKcnWKaXhNI0TJl2ve9lOfpq9.Vzbi4nuWVVXIv+Fy2vlUCQ4xEEUQrUeEbob+Szp58Hlbrn14cjLNwT7qGp/Q6SZGmvv2SFmTdd4QsZBO+GU59moElVXwiFDN6LJwQ2oPoQv+3PGqeFmB/7rTR9AsucLC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oesbjQe9/0FPAtGETyf8HEbDbFkS6VBZvLLRngBp1X+jLVZCZTNaJKf77UTgrH7GkNQSClVv+ki82JVPhWR2prUcWxY/7nZ0G19nYGiRrphx7TRFyxrxxs6GGmec6ruW.xZkCvn9Zfx0HfOpd2bm8FX7VDfWhojsGj+KLY0VrykWvU1Y9ijeU/taz/+/H4NWF05uxWPDtYwzAXloyHeQGxK5TQ2dLAkqxJoIMxTyFO3EP3bamokD2bXUWApzL2R0b">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -406,7 +406,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gggqdwrtOPPPslV/hYC3ezD2dVSnNJazAsyOSze6Su+BnCf3o3yUbzB+FqtdNdGy6CsVvF2RKZO8g0vT/PVMoarVKh+WppgVQkRH0qirHoZZakmWFFeeh+NRGyL4k2IX.TmJ8cy6Odby4G8tIaF3iO0TV6MprQ+wBYVdMXzejgK2TjwyqVJd7g/p08r8fLDT+3MWIoZlR5ULZRT+Jzwew3moblsnq7b0Y3Yvu2s2P5SpTG4U7jEgiKvUdCdCvab1G">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LDoBWbumxN8dDoukzFIzO3E5dQPrrU6L1dhCG2Ofx1zLUIowf0GCRhjFroe79B0I9ZlFowVMTwkw1YuVjws6DmsHg+iKRsxtMkRUpKN5Ez1RzVJfIaQdAX7c4XkK4HZ/.mOCbYL1KWm/3OPIxkq/gLwi1o3Qx9X75lufJvqf8iuZmL7PGFIrAcdVMD+6/K/I2lHCpQ2ksJoHKl32aCdKpT2/T/GOCbHyhzIir8iky8srF/f5RkAT7xMbWeD6OWX/v">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
