create github pages

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <div class="modal-body">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        Has COVID-19 (coronavirus disease 2019) impacted your business? Invoice financing may help ease the cash flow strain on your business. <a href="#bottom">Contact us</a> (no cost to apply) to discuss your options.<br><br>It's no secret that cash flow is the lifeblood of every business. The coronavirus pandemic is effecting the cashflow of all businesses currently.
+                        Has COVID-19 (coronavirus disease 2019) impacted your business? Invoice financing may help ease the cash flow strain on your business. <a href="Contact.html#form1-y">Contact us</a> (no cost to apply) to discuss your options.<br><br>It's no secret that cash flow is the lifeblood of every business. The coronavirus pandemic is effecting the cashflow of all businesses currently.
 <br>
 <br>Accounts receivable factoring is a process that turns your accounts receivables (invoices) into cash flow by eliminating the waiting period while your invoices are paid. This provides businesses with the opportunity to have consistent cash flow for ongoing operations and additional cash reserves to fund growth opportunities, especially when your customers have slowed paying their invoices due to the slow-down in the econoony due to the Coronavirus pandemic.
 <br>
@@ -156,7 +156,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="Contact.html">CONTACT US</a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="Contact.html#form1-y">CONTACT US</a></div>
                     </div>
                 </div>
             </div>
@@ -166,7 +166,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
-                    <h5 class="modal-title mbr-fonts-style display-5">CARES ACT 2020</h5>
+                    <h5 class="modal-title mbr-fonts-style display-5">Paycheck Protection Program</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32" fill="currentColor">
                             <path d="M31.797 0.191c-0.264-0.256-0.686-0.25-0.942 0.015l-13.328 13.326c-0.598 0.581 0.342 1.543 0.942 0.942l13.328-13.326c0.27-0.262 0.27-0.695 0-0.957zM14.472 17.515c-0.264-0.256-0.686-0.25-0.942 0.015l-13.328 13.326c-0.613 0.595 0.34 1.562 0.942 0.942l13.328-13.326c0.27-0.262 0.27-0.695 0-0.957zM1.144 0.205c-0.584-0.587-1.544 0.336-0.942 0.942l30.654 30.651c0.613 0.625 1.563-0.325 0.942-0.942z"></path>
@@ -176,7 +176,7 @@
 
                 <div class="modal-body">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        On March 31, 2020, the U.S. Department of the Treasury and the Small Business Administration (SBA) released the application form for businesses to apply for and obtain loans under the Paycheck Protection Program.<br><br> This program, established under the <a href="https://home.treasury.gov/policy-issues/cares/assistance-for-small-businesses">Coronavirus Aid, Relief, and Economic Security Act (CARES Act)</a>, provides $349 billion for small business loans to cover qualified payroll costs, rent, utilities, and interest on mortgage and other debt obligations. To obtain a loan, a qualifying small business should submit an application through an SBA- and Treasury- approved bank, credit union, or nonbank lender.<br><br><strong>However, many SMBs are experiencing SIGNIFICANT delays in getting approved for these funds or outright denial of their application.<br><br>Can you wait another 90 days?&nbsp;</strong><br><br> <a href="#bottom">Contact us</a>&nbsp;to discuss your options.<br><br><br> 
+                        On March 31, 2020, the U.S. Department of the Treasury and the Small Business Administration (SBA) released the application form for businesses to apply for and obtain loans under the <a href="https://www.sba.gov/funding-programs/loans/coronavirus-relief-options/paycheck-protection-program-ppp">Paycheck Protection Program</a>.<br><br> This program, established under the <a href="https://home.treasury.gov/policy-issues/cares/assistance-for-small-businesses">Coronavirus Aid, Relief, and Economic Security Act (CARES Act)</a>, provides $349 billion for small business loans to cover qualified payroll costs, rent, utilities, and interest on mortgage and other debt obligations. To obtain a loan, a qualifying small business should submit an application through an SBA- and Treasury- approved bank, credit union, or nonbank lender.<br><br><strong>However, many SMBs are experiencing SIGNIFICANT delays in getting approved for these funds or outright denial of their application.</strong><br><br><strong>The&nbsp;Paycheck Protection Program&nbsp;ran out of money on 4/16/2020 and Congress is now debating additional funding<br><br>Can you wait another 90 days or more?&nbsp;</strong><br><br> <a href="Contact.html#form1-y">Contact us</a>&nbsp;to discuss your options.<br><br><br> 
                     </p>
 
                     <div>
@@ -190,7 +190,7 @@
                     </div>
 
                     <div class="modal-footer">
-                        <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="Contact.html">CONTACT US</a></div>
+                        <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="Contact.html#form1-y">CONTACT US</a></div>
                     </div>
                 </div>
             </div>
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QOR7faV6kInFAgv9y5umx5wBxYyzP/BfAzRzwZ6MRfgtVhpRawsFmR7LfsEyNXAPb7AN3q7yAH8HDObjWewdhGHpP/Dbx3YHuqPwAV7lFMxCIo+OlomgtgJw87DRzsDU.B2LnUQgPo20N10VY1actJ28miNRmnvmxgY7yLXBIPDF0QiNQS4XjVNeeLirP+p8mAuzFrWiwq3ESxHYHPgJcloQpYUM8D8kJVobhPx+/9816bGfjqmoN/lD4Ewf/gqgi">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gCQZdp7E3lf0my9pzWyP+0XydKbG7kQxo3VAC+zTtOyCWiTwAlrizN1Hs/P0VgZs5TjWTYU8/mY/S+5MzeLae7N5XU6bregRQakErSvMG/sZgt9Z8cvXfKVcH9R7nkZI.VmwFXxr9/4kBb0JsDkSR/HGpOaM3eUCsWlplNUvTTKBSsGKlEYhwrJRLDkTG+67hTaqatcHZIOE2XwcMlaU66BbkbryhPFpG+6gwMGynUeSwoDmwXTShejuirXXlH4kf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -406,7 +406,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tFUPFvgGSH9LO/TmLacr+OJ6qcwGYJxnHgJtlDdwTQri38AmBNcjyBUCNYeSZAOfGD94jVMef3hqd7Dv3Skg+vJlBzvYMYgI0Ze2XBM3skhgKi9NfhBYlImE6e/ySiH1.BcWMlJtNSs+GgZY8ZZBMizieGySKaUKCYh2IjxGYtYcDHHQ4mIBb6rNB0F4PzDoCVuIT2JCb6x5BtvpC2p6p+ce8MpvLoqd4OEuTD665cTuOrO0fyLaj8/kaU+YLXmOk">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K3tDbW1Jyt3jL1D8TSpUlrwGJ15Y1qBWyP8ulAC4kJzcaijpmP9Q5hiTeQL+fALMImpJkjIi1zSIxMsHjM8jvM4NZDQQJBtpLU0N2zcUm/5EfjCpInhNA/BOqOYdKHDE.Y8erxmrbWj84tDqBfBMj3prfW53ZTzRdFC127hK8v64BKLnVx8m0PQiCLxFjT7UI+TIyF5juY6zA/8Bhkk/eOFzv5xxrADLO7fyeePEUmEsm79RJIlO//SHM4z2DQ2j4">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
