--- a/Contact.html
+++ b/Contact.html
@@ -269,7 +269,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ubm0mzgC1FYmQXUZbzWMrtaPM1zl8SdC8GqiR4cdpsE5NfU37N6x/56wdXNyz8zKGWipEWgZr1GOVSMHpjU5wW7fiK0dM3NuiWiEfq6xQNP0CwYbAc/6dwtnpaYPHLWa.7gv6/ezObXJ9oG9UF2jUrEXEfY5C23h0aeRrOw4Rb6zztgugg6H29R20PpFd7buzrZ3rMGftEWKSMjNM8cmSzIgBa8Eusq+WCJ2gnv/iu/NN2zExi1bAxmY/X18XE0uG">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BAHksL/l4JDSwK5tylBTSY/sbOLRFgOPy7ruQnuHDJMOqOlzQQ3uEuwnkS0Vv0PeV4Ij9ILslqfCkkl+fTB/3ZfqeNIQOEYpQfbHVonRLfumAOPxmhgCj8AcBhJBLM0u.dURLFfpkaqUOhLBWPOURXm5SfOhKLD5JyXfu61X2ngvvZbgr6e91laITpGUxQ7cbVvc/CCVEg0XdhOnPegbuM2Ju5EnK6G7B5EHVrvpJ8nWKi/mxIz4ftN+GrAkATq73">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -305,7 +305,7 @@
 </section>
 
 <div class="modal mbr-popup cid-rWkFvtvu1B fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0" id="mbr-popup-l" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-7">TERMS OF SERVICE</h5>
@@ -372,10 +372,10 @@
         </div>
 
 <div class="modal mbr-popup cid-rWkFvvGuHY fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0" id="mbr-popup-g" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
-                    <h5 class="modal-title mbr-fonts-style display-7">PRIVACY POLICY</h5>
+                    <h5 class="modal-title mbr-fonts-style display-4">PRIVACY POLICY</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32" fill="currentColor">
                             <path d="M31.797 0.191c-0.264-0.256-0.686-0.25-0.942 0.015l-13.328 13.326c-0.598 0.581 0.342 1.543 0.942 0.942l13.328-13.326c0.27-0.262 0.27-0.695 0-0.957zM14.472 17.515c-0.264-0.256-0.686-0.25-0.942 0.015l-13.328 13.326c-0.613 0.595 0.34 1.562 0.942 0.942l13.328-13.326c0.27-0.262 0.27-0.695 0-0.957zM1.144 0.205c-0.584-0.587-1.544 0.336-0.942 0.942l30.654 30.651c0.613 0.625 1.563-0.325 0.942-0.942z"></path>
@@ -479,7 +479,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jA2PRcxaJJZ86QrQJdFgrNy8sQrOpASfQ6MKo7bs6+gO15Q7MY7E53hPV5G2WHdtIh7vQNBN/4wcO65zZQOTA2MJDIHzhmoAAT+eb+GXqi2k1grsuAaiTHTQdLXqFMWL.x3vNa8lHdDNIvkkmoc+QJVkrnG519DkIe6ijN9mcXaOCc7EHx8jMPZaEMa1+NHgwR8ECU0OMV27eLL5kNiCOohGpH46OZCWlqbZD+ycsZaOibujQ8aDUs1geT95K1lFZ">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oQtNiNLE95JqtVXby4kygmmK56iN3bIeapucUUiZ9tskDdyn+hn4RcaSxs1dyZA9Nd9v5Kot/q6drzppx71EzF1XxP1n0zeQEBM5SHk/0vdmshPgOyu/fJP0tdfoHwIj.PpxaHgh6XPG/1fxj/YKwTuUW/lE8FyWeGpqx6AjIU0pJrSPlE7m4W+/+xo/ud6URtgZFbwXgOrn2OD7yGOgCYz/yq3i4pYDzSl6a/3ZoIjj9vu2VMxM+xeGIX+RZnM07">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
