--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </section>
 
 <div class="modal mbr-popup cid-rUyBGtVL0E fade" tabindex="-1" role="dialog" data-on-timer-delay="4" data-overlay-color="#ffffff" data-overlay-opacity="0.8" id="mbr-popup-f" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-5">Fighting Coronavirus</h5>
@@ -163,7 +163,7 @@
         </div>
 
 <div class="modal mbr-popup cid-rWkCyvSBgW fade" tabindex="-1" role="dialog" data-on-scroll="true" data-overlay-color="#ffffff" data-overlay-opacity="0.8" id="mbr-popup-o" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-5">Paycheck Protection Program</h5>
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gCQZdp7E3lf0my9pzWyP+0XydKbG7kQxo3VAC+zTtOyCWiTwAlrizN1Hs/P0VgZs5TjWTYU8/mY/S+5MzeLae7N5XU6bregRQakErSvMG/sZgt9Z8cvXfKVcH9R7nkZI.VmwFXxr9/4kBb0JsDkSR/HGpOaM3eUCsWlplNUvTTKBSsGKlEYhwrJRLDkTG+67hTaqatcHZIOE2XwcMlaU66BbkbryhPFpG+6gwMGynUeSwoDmwXTShejuirXXlH4kf">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mtexUbl7cnARFCwk2k0jxiQFfWhorbDVcTMq5kuz0Xf0RYwycJUuwKWWOF2RTRcUqOqmtwibzlb5gQ9Xg6vUb+ltdxwcely80UcTJBCMi/PxCkn6BteaBu+lRfbUlav5.22TRNqIMDCdwkT6Td4lkB/3RRpgBb75EzIFK4W7kurJn9xX+CIb8vNNtbA5L4Q6F8f0VsqYP14ZUMh06h/VTfTlfK/1BYPB4+QYRqbRjff+jhk3E56NmKl1QvX3wPUd8">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -406,7 +406,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="K3tDbW1Jyt3jL1D8TSpUlrwGJ15Y1qBWyP8ulAC4kJzcaijpmP9Q5hiTeQL+fALMImpJkjIi1zSIxMsHjM8jvM4NZDQQJBtpLU0N2zcUm/5EfjCpInhNA/BOqOYdKHDE.Y8erxmrbWj84tDqBfBMj3prfW53ZTzRdFC127hK8v64BKLnVx8m0PQiCLxFjT7UI+TIyF5juY6zA/8Bhkk/eOFzv5xxrADLO7fyeePEUmEsm79RJIlO//SHM4z2DQ2j4">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UgX/13H1PDWEfmIpRAchwd0OOabEXPIFwy7KnPto/GeD5SVuZ7barXU5bgzO1y4drSlEZGny9tMyhpLDG8fHm6PV9Y/QF7/11lyVvc3BeYjCvUhw4cR7AoNJ1bvmwIE+.VKfCt3FH3PjEVbprqFYHQgzn157p+fMQXH0Kg3igLRQSbnTVsIc4RQrn/c97Ke6n/DFQWyX0TRydkfP/k4kRxqNiXZZ/mx6jslkRtPo+pr7O4ufpcIgNRxRVr4KtVtuP">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
@@ -699,7 +699,7 @@
         </div>
 
 <div class="modal mbr-popup cid-rV0UjmI6h5 fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0" id="mbr-popup-l" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-7">TERMS OF SERVICE</h5>
@@ -766,7 +766,7 @@
         </div>
 
 <div class="modal mbr-popup cid-rUKVCJFtFW fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0" id="mbr-popup-g" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header pb-0">
                     <h5 class="modal-title mbr-fonts-style display-7">PRIVACY POLICY</h5>
