--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OCNJNyXOd8/+xldKHqNH4xSC5h8cZ6+QqAzDUKUUUZ/FWCoh8ufzcgK3561I9BgUko3G+S23621i8CtMD5lvx3yzgWqaTOMq3+qHuVcqoiHYSmORZLMZf3QTrdFsA1x2.6Bj2fdvFMrTFrkvYJnunQnbTTVHF1ijLjKLMdLU0I4BBivX7iEfD60UthTmbfsMOHAGiecIcAK4hG8Ge+CEQRpYgE3EfunhNNe7lNw5RDz6hyaM+UHbSljDhmEPAnDqS">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ixEZlq9qZNm2+giCzVlN9idPilcF5w1e1tEE7pcxt83uzNcgdBMpzbCpVdluKqSQSlhSWurkarlTutxG1p3iblCaIsjBAagnN/lKzHr/pPiK9YgDJevMZFlmb+2Q5mya.TP96oH4LqIPuFULKP51F0wD++KmsyqQAmNPZhi9Zu8v7AyJuts5LOGuwzGQedM3eBow4MVGNOo9GkHF6BDORePixkIT17H8dGRUj7unBhtqV+bACtnPuR5Rh1D2oiUvU">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -398,7 +398,7 @@
                 </div>
             </div>
             <div class="col-md-12 col-lg-2 m-auto px-4 align-right">
-                <p class="mbr-text mb-0 links mbr-fonts-style display-4"><a href="popup:#mbr-popup-g" data-toggle="modal" data-target="#mbr-popup-g">Privacy &nbsp;</a>| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l" class="text-white">Terms Of Service</a></p>
+                <p class="mbr-text mb-0 links mbr-fonts-style display-4"><a href="popup:#mbr-popup-g" data-toggle="modal" data-target="#mbr-popup-g" class="text-white">Privacy &nbsp;</a>| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l" class="text-white">Terms Of Service</a></p>
             </div>
             <div class="col-md-12 col-lg-3 m-auto px-4 align-left">
                 <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 20003-2020 Triangle Funding Group</p>
