--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="ff6p8AAaAy7xyOGHohdTlJLSxqpsnfEroSAx/wgFpZ97Nca5u2PcexThsTkI4VMpYecPORe5RY9B4JTvpI57gKMBrZei7CeqITUXsOHVcqtaoJ8B9KwkuQmnhUSahveh.XkueZztqONCK3SYgLxgfdJcJzoaisTjYLh8+yGd3YlWnBgtg7skB4c8veS9IYlZ4fmtbFQ7VoHqXbs6nu62iQb4L1ae1LK4svxNy7l7E1+xlT0SxLkWc3FQgerEmxFif">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="is1qZiQ2Rq5IAep++P9LYdUcUs0Kg+jys5k56mwkDXvYTkpEqC6ZQA1kNPxK8a0cGoiReanZN0fECYN5A/0396gohwxYp+xV8psVw+hSDFyOJuqnMcambvebbXeLndVt.4YWkkFt4qA/HY57ZFGvZ5ZIFbMndO5WDkH99wgpNUISaOcgHSHuMhQTEq+MzJc73YTNSv2gWMyn6n0LtSBvJJ/J0uLIzSQiGeaX/T057a/yKqQBBGQfQsFU/9p+JOBJp">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -524,7 +524,7 @@
                 <p class="mbr-text mb-0 links mbr-fonts-style display-4"><a href="popup:#mbr-popup-g" data-toggle="modal" data-target="#mbr-popup-g" class="text-white">Privacy &nbsp;</a>| &nbsp;<a href="popup:#mbr-popup-l" data-toggle="modal" data-target="#mbr-popup-l" class="text-white">Terms Of Service&nbsp;</a></p>
             </div>
             <div class="col-md-12 col-lg-3 m-auto px-4 align-left">
-                <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 2020 Triangle Funding Group&nbsp;| &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<a href="popup:#mbr-popup-2q" data-toggle="modal" data-target="#mbr-popup-2q" class="text-white">Copyright Notice</a></p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-4">© Copyright 2020 Triangle Funding Group&nbsp;| &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br><a href="popup:#mbr-popup-2q" data-toggle="modal" data-target="#mbr-popup-2q" class="text-white">Copyright Notice</a></p>
             </div>
         </div>
     </div>
