create github pages

--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
                         </div>
                     </div>
 
-                    
+                    <div class="modal-footer pt-0">
+                        <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="index.html#header12-1s"><span class="mdi-social-school mbr-iconfont mbr-iconfont-btn"></span>
+                                LEARN MORE
+                            </a></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -424,7 +428,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="is1qZiQ2Rq5IAep++P9LYdUcUs0Kg+jys5k56mwkDXvYTkpEqC6ZQA1kNPxK8a0cGoiReanZN0fECYN5A/0396gohwxYp+xV8psVw+hSDFyOJuqnMcambvebbXeLndVt.4YWkkFt4qA/HY57ZFGvZ5ZIFbMndO5WDkH99wgpNUISaOcgHSHuMhQTEq+MzJc73YTNSv2gWMyn6n0LtSBvJJ/J0uLIzSQiGeaX/T057a/yKqQBBGQfQsFU/9p+JOBJp">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="IrY5trxgBaiWdMp6gT4uUGu1xNU7jKNbhYOvBQb2XJCKBFxIEq6nVlcHhtI6TmxMj01hmPN9RqHiyelVfGA9xbnfrZh+Jy3gvRBeXuweI54OHrpy3jey6TcTol3qx3H4.ytaqboy89WbtxxOpW97HKXhQGgb0SiCltHlnAjgIc6LnokIzzxChaPDvo1B4vkKk/jocygiVqJnG1o5pKqx0jC3yXLa9ofGhiecK8XeTXQzDlp2/9HZ70WrmZKAgkBsg">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
