--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="navbar-brand">
                 
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="index.html#header12-1"><span class="fa fa-home mbr-iconfont mbr-iconfont-btn"></span>
-                        TRIANGLE FUNDING GROUP</a></span>
+                        TRIANGLE FUNDING GROUP &nbsp;(919) 323-6293</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -91,8 +91,8 @@
     <div class="container  ">
             <div class="media-container">
                 <div class="col-md-12 align-center">
-                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"></h1>
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">BUSINESS FUNDING...WHEN THE BANKS SAY 'NO'</p>
+                    <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-2">CALL US &nbsp;(919) 323-6293 &nbsp;EMAIL: info@trianglefundinggroup.com</h1>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"><strong>BUSINESS FUNDING...WHEN THE BANKS SAY 'NO'</strong></p>
                     
 
                     <div class="icons-media-container mbr-white">
@@ -428,7 +428,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="J4T5cgGbZnt7qyqKFFtQlFqFOiwpSLsGH+vljKpzYZOBPOl5+opLtghxUIzLtK0RbuzoNqPiB9Tcxw5dnwXszRVE3DkqVGWokr+qNlW8x9sqI5NxtXJgJTG5MA6B2QS/.rWprRPGR7RBO8kJJ2al9fALKuupLgacjvp2UNJ8iPXz2stPhVloKtzKT95zQD7iHbBiEM9DVeGBL9be7GlUPHRMKpioVZ21Idb1kZTtaaVaBYi1S3HstjDDl66bdo2ei">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="wjWj+EeOuPZqAMc2tz/x2Z/NpycMA2Bjk7B9gfGPSo8uJMSYzfItHEUlgYvDxGWr7/z0NyooLAWxQSSHju0CFZydAH4N3u9aFHDTR+RwunpLfj0phir4m8aOX2+EAHa4.sdc/zBpYJ34GdsfHU9TJc61FcNe46E101HLSk7jhmBcHLjHkdPyOT9LAUa9kEv2mPHs2b9OybuI6WKOOjDn1cZSv4h2HOefuZ3ABiO6BPYcuNC15SyW99EDHLWFBBX4v">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
