--- a/index.html
+++ b/index.html
@@ -428,9 +428,9 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="wjWj+EeOuPZqAMc2tz/x2Z/NpycMA2Bjk7B9gfGPSo8uJMSYzfItHEUlgYvDxGWr7/z0NyooLAWxQSSHju0CFZydAH4N3u9aFHDTR+RwunpLfj0phir4m8aOX2+EAHa4.sdc/zBpYJ34GdsfHU9TJc61FcNe46E101HLSk7jhmBcHLjHkdPyOT9LAUa9kEv2mPHs2b9OybuI6WKOOjDn1cZSv4h2HOefuZ3ABiO6BPYcuNC15SyW99EDHLWFBBX4v">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Contact Us"><input type="hidden" name="email" data-form-email="true" value="CZu8Xv01BSOR3SRNueUjF6FMgiyEUPG0N2KzsEIKHFZoaMXuIiPY/8N4bzNL9OauNbQXwhgCLyYZ0qeqLoeZWNzVc8ahCFjteWiPEj3R11IKOHoH2calFID8ZAQuBoXK.NQKdSFr9cd56CkXb7ycTF89T/Ogo3i8TM7ZuF/jBDbObjyffZZZBHO42ZYPpdLBfI+fDIwQDkZFFezhaOFTrySXakz5bk6h+sHDERV+uh2qBaDpyWy7NSJnf2w9ccO1j">
 <div class="row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! Feel free to call us at (919) 323-6293</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
 </div>
 <div class="dragArea row">
@@ -451,7 +451,7 @@
 <label for="Services-form1-2m" class="mbr-fonts-style display-7">What can we help you with?</label>
 </div>
 <div class="form-check">
-<input type="radio" name="Services" data-form-field="Services" class="form-check-input display-7" value="Factoring" checked="" id="Services-form1-2m">
+<input type="radio" name="Services" data-form-field="Services" class="form-check-input display-7" value="Factoring" checked="checked" id="Services-form1-2m">
 <label class="form-check-label display-7">Factoring</label>
 </div>
 <div class="form-check">
@@ -486,12 +486,18 @@
 <input type="radio" name="Services" data-form-field="Services" class="form-check-input display-7" value="Paycheck Protection Program" id="Services-form1-2m">
 <label class="form-check-label display-7">Paycheck Protection Program</label>
 </div>
+<div class="form-check">
+<input type="radio" name="Services" data-form-field="Services" class="form-check-input display-7" value="Trade Finance" id="Services-form1-2m">
+<label class="form-check-label display-7">Trade Finance</label>
+</div>
 </div>
 <div data-for="message" class="col-md-12 form-group">
 <label for="message-form1-2m" class="form-control-label mbr-fonts-style display-7">Message</label>
-<textarea name="message" data-form-field="Message" class="form-control display-7" placeholder="Message" id="message-form1-2m"></textarea>
+<textarea name="message" data-form-field="Message" class="form-control display-7" id="message-form1-2m"></textarea>
 </div>
-<div class="col input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Send</button></div>
+<div class="col input-group-btn align-center">
+<button type="submit" class="btn btn-primary btn-form display-4">Send</button>
+</div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -548,7 +554,7 @@
 
                 <div class="modal-body">
                     <p class="mbr-text mbr-fonts-style display-7">All original content on <a href="index.html">https://www.trianglefundinggroup.com/</a><br> is created by the <a href="mailto:ebtroedsson@gmail.com">website designer</a>, including but not limited to text, design, code, images, photographs and videos are considered to be the Intellectual Property of the website owner, whether copyrighted or not, and are protected by DMCA Protection Services using the Digital Millennium Copyright Act Title 17 Chapter 512 (c)(3). <br><br>Reproduction or re-publication of this content is prohibited without permission.
-<br><br>**This website is best viewed on modern browsers: Chrome - Edge - Firefox - Opera |<br><br> MS Internet Explorer is no longer supported<br><br>website updated: 5-01-2020 @ 10:51 am v1.1.10</p>
+<br><br>**This website is best viewed on modern browsers: Chrome - Edge - Firefox - Opera |<br><br> MS Internet Explorer is no longer supported<br><br>website updated: 5-08-2020 @ 8:14pm v1.1.20</p>
 
                     <div>
                         
